# mini2

./: .gitignore  CMakeLists.txt  readme.md
configs/distributed_testing/: config_A.json  config_C.json  config_D.json
configs/distributed_testing_1/: config_A.json  config_B.json  config_C.json  config_D.json  config_E.json
configs/local_testing/: config_A.json  config_B.json  config_C.json  config_D.json  config_E.json
cpp/include/parser/: SpatialAnalysis.h
cpp/src/: SpatialAnalysis.cpp  server.cpp  server_a.cpp
proto/: mini2.proto
python/src/: client.py  client1.py  client_single_proc.py  mini2_pb2.py  mini2_pb2_grpc.py
